<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
     >

    <TextView
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/publica_sans"
        android:text="Login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/publica_sans"
        android:text="Username or Email"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/edtLoginEmail" />

                <EditText
                    android:fontFamily="@font/publica_sans"
                    android:padding="5dp"
                    android:textColorHint="@color/gray"
                    android:inputType="textEmailAddress"
                    android:autofillHints="AUTOFILL_HINT_PERSON_NAME_GIVEN"
                    android:id="@+id/edtLoginEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:hint="@string/email"
                    android:background="@drawable/drawable_writemessage_edittext"
                    android:minWidth="300dp"

                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="20dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/publica_sans"
        android:text="Password"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"

        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/edtLoginPassword" />
                <EditText
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:fontFamily="@font/publica_sans"
                    android:paddingStart="20dp"
                    android:inputType="textPassword"
                    android:background="@drawable/drawable_writemessage_edittext"
                    android:autofillHints="password"
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/password"
                    android:minWidth="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtLoginEmail" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnConfirmSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_sign_in_button"
        android:elevation="10dp"
        android:fontFamily="@font/publica_sans"
        android:minWidth="300dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textColorHint="@color/background"
        android:textSize="17dp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="30dp"
        android:layout_height="30dp"

        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/edtLoginPassword"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Remember me"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/rememberMe"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginPassword" />


    <TextView
        android:id="@+id/txtLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/publica_sans"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/edtLoginPassword"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:fontFamily="@font/publica_sans"
                    android:id="@+id/txtInformOfSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:layout_marginBottom="50dp"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:fontFamily="@font/publica_sans"
                    android:textColor="@color/darkblue"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    android:text="Create an account"
                    android:id="@+id/txtGoToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtInformOfSignUp"
                    app:layout_constraintStart_toEndOf="@+id/txtInformOfSignUp"
                    app:layout_constraintTop_toTopOf="@+id/txtInformOfSignUp" />

    <TextView
        android:layout_margin="40dp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/publica_sans"
        android:text="OR"
        android:textColor="@color/gray"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmSignIn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout3"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_writemessage_edittext"
        android:minWidth="300dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSignInWithExistinAccount">


        <ImageView
            android:id="@+id/imgFb"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/facebook_image"
            android:src="@drawable/ic_google_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signInWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/imgFb"
            android:text="Sign in with Google"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgFb"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSignInWithExistinAccount"
        android:elevation="10dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_writemessage_edittext"
        android:minWidth="300dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmSignIn">


        <TextView
            android:id="@+id/signInWithExistingAccount"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:text="Sign in with existing account "
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/existingProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_profile"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInWithExistingAccount" />

        <TextView
            android:id="@+id/existingAccountEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/existingProfileImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_writemessage_edittext"
        android:minWidth="300dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">


        <ImageView
            android:layout_marginLeft="50dp"
            android:id="@+id/imgGoogle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/google_image"
            android:src="@drawable/facebookicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/signInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imgGoogle"
            android:text="Sign in with Facebook"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgGoogle"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

